[package]
name = "simple_stresscheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.1"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["std", "derive"] }
serde_json = "1.0.95"
